cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_24.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ecb.c:21: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ecb.c:21:5: Write of unused value
19.       n2l(in, l);
20.       d[0] = l;
21.       n2l(in, l);
          ^
22.       d[1] = l;
23.       if (enc)
